# memory-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  mcp.json  pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql  setup.py
.github/workflows/: deploy-docs.yml
docs/: _config.yml  index.html  robots.txt  script.js  sitemap.xml  styles.css
docs/locales/: en.json  es.json
examples/antigravity/: README.md
examples/claude-code/: README.md
examples/claude-desktop/: README.md
examples/codex-plugin/: README.md
examples/native-chat/: README.md
examples/opencode/: README.md
examples/qwen-plugin/: README.md
src/: __init__.py  interface_detector.py  model_router.py  optimizer.py  server.py
src/utils/: __init__.py  db.py  formatters.py  repository.py  validators.py
tests/: __init__.py  test_optimizer.py  test_server.py
tests/fixtures/: sample_data.json
